--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build-runtime-dom": "node scripts/dev.js runtime-dom -f global -s",
-    "build-runtime-core": "node scripts/dev.js runtime-core -f global -s",
-    "build-reactivity": "node scripts/dev.js reactivity -f global -s"
+    "dev": "node scripts/dev.js"
   },
   "keywords": [],
   "author": "",
